tests/paczka1/small_fuzzy/40162916.err
Error in line 4: Rg9xgCga S823 80,5
Error in line 9: S823 S140 5,8
Error in line 13: OSVQwK A360 18,1
